src/objects/Subscription_Site__c.object
<CustomObject>
    <description>Object to manage delivery of subscriptions to multiple sites</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a site is currently active</description>
        <inlineHelpText>Indicates if a site is currently active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Number_of_Site_Employees__c</fullName>
        <label>CE Site Employees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Site_Area__c</fullName>
        <label>CE Site Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Building__c</fullName>
        <label>CE Site Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_City__c</fullName>
        <label>CE Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Contact_Email__c</fullName>
        <label>CE Site Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Contact_Name__c</fullName>
        <inlineHelpText>The name of the contact located on the site.</inlineHelpText>
        <label>CE Site Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Contact_Phone__c</fullName>
        <label>CE Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CE_Site_Country__c</fullName>
        <label>CE Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Site_Industry__c</fullName>
        <label>CE Site Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Name__c</fullName>
        <inlineHelpText>The name of the site</inlineHelpText>
        <label>CE Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Postal_Zip_code__c</fullName>
        <label>CE Site Postal/Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Site_Street__c</fullName>
        <label>CE Site Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the site has been cancelled
Field added by FF and I don&apos;t know what it does.</description>
        <inlineHelpText>DO NOT USE (uncheck &quot;Active&quot; if the site is cancelled)</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to define if cert has been printed for site</description>
        <inlineHelpText>If ticked, this site has had a certificate printed</inlineHelpText>
        <label>Certificate Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Delivery Address or &apos;Alternate Address&apos; requested by the Contact for a Subscription Site. i.e. if the Contact does not want the Subscription delivered to the Address associated with ther Account they can request a different Address</description>
        <inlineHelpText>This overrides the Account address, if populated</inlineHelpText>
        <label>Delivery Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Subscription Sites</relationshipLabel>
        <relationshipName>Subscription_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Renew_This_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if don&apos;t want to renew this site when subscription renewal</description>
        <label>Do Not Renew This Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Print_Certficate__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>&quot;SFSubscription_Site__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6EP;SFContact:&quot; &amp; Site_Contact__c  &amp;&quot;;Deploy:a3SD0000000L6bg&quot;</formula>
        <inlineHelpText>String used by Drawloop to work out what to do.</inlineHelpText>
        <label>LOOP Print Certficate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the site is the main site and renewal should be sent here - DG
Actually, it doesn&apos;t seem to do anything and shouldn&apos;t be used - JJ</description>
        <inlineHelpText>DO NOT USE (use Type = Single Site or Multi-Site Primary instead. The renewal will go the account on the Subscription</inlineHelpText>
        <label>Main Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Subscription_Start_Date__c</fullName>
        <description>Populates site start date with subscription start date</description>
        <formula>Subscription__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated_Subscription_Site_Ref__c</fullName>
        <description>This stores the valule of the Subscription Site Ref as it was in Course Booker. Moving forwards the value used will be a formula field on the Subscription Site.</description>
        <inlineHelpText>Maps to Member_Location.MEL_Ref from CB</inlineHelpText>
        <label>Migrated Subscription Site Ref</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indictes whether the Subscription Site data has been migrated from Course Booker</description>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Magazine_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Magazine Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_MEL_ID__c</fullName>
        <description>This is the Primary Key of the Subscription Site from the source Location data and maps to Member_Location.MEL_ID. From the Member_Location table in the CB database.</description>
        <externalId>true</externalId>
        <inlineHelpText>Maps to Member_Location.MEL_ID from CB</inlineHelpText>
        <label>PK_CB_MEL_ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The Password related to the Subscription Site.</description>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used code</description>
        <label>Previous Subscription Site</label>
        <referenceTo>Subscription_Site__c</referenceTo>
        <relationshipLabel>Subscription Sites</relationshipLabel>
        <relationshipName>Previous_Subscription_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will force the workflow to print the certificate for this site as long as it hasn&apos;t been printed before.</description>
        <inlineHelpText>This will force the workflow to print the certificate for this site as long as it hasn&apos;t been printed before.</inlineHelpText>
        <label>Print Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_Area__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_Area__c ,
 Delivery_Address__r.Address_Area__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_Building__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_Building__c,
 Delivery_Address__r.Address_Building__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_City__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_City__c ,
 Delivery_Address__r.Address_City__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_Country__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 TEXT(Site_Account__r.Principle_Address_Country__c) ,
 TEXT(Delivery_Address__r.Address_Country__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_State_Province__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_State_Province__c ,
 Delivery_Address__r.Address_State_Province__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: State / Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_Street__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_Street__c,
 Delivery_Address__r.Address_Street__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Site_Address_ZIP_Postal_Code__c</fullName>
        <description>Auto populates address info from subscription unless delivery address is populated</description>
        <formula>IF(
ISBLANK( Delivery_Address__c ),
 Site_Account__r.Principle_Address_ZIP_Postal_Code__c ,
 Delivery_Address__r.Address_ZIP_Postal_Code__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates address info from subscription unless delivery address is populated</inlineHelpText>
        <label>S Site Address: ZIP / Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Multi_Site_Subscription_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Email__c</fullName>
        <description>Populates field with email address of site contact</description>
        <formula>Site_Contact__r.Email</formula>
        <inlineHelpText>Email address of site contact</inlineHelpText>
        <label>Site Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_ID__c</fullName>
        <formula>Site_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Job_Title__c</fullName>
        <description>Populates field with job title of site contact</description>
        <formula>Site_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates with job title of site contact</inlineHelpText>
        <label>Site Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Tel__c</fullName>
        <description>Populates field with phone of site contact</description>
        <formula>Site_Contact__r.Phone</formula>
        <inlineHelpText>Auto populates field with phone of site contact</inlineHelpText>
        <label>Site Contact Tel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Multi_Site_Subscription_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_End_Date__c</fullName>
        <description>Populates filed with subscription end date</description>
        <formula>Subscription__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populates with subscription end date</inlineHelpText>
        <label>Site End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Start date of site - will default to date site added.  Can be overwritten for pro-rata additions.</description>
        <label>Site Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Start_date_from_CourseBooker__c</fullName>
        <description>temp field</description>
        <label>Site Start date from CourseBooker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Status__c</fullName>
        <description>Populates site status from Subscription Status, unless the site is no longer active</description>
        <formula>IF( OR(Cancelled__c =TRUE, Active__c=FALSE),
 &quot;Inactive&quot;,
TEXT(Subscription__r.Status__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the same as the Subscription Status, unless the site is no longer active</inlineHelpText>
        <label>Site Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Site_Address_Combined__c</fullName>
        <description>Combines site address into one field</description>
        <formula>IF(ISBLANK(S_Site_Address_Building__c), &quot;&quot;,S_Site_Address_Building__c+ BR() ) +
IF(ISBLANK(S_Site_Address_Street__c), &quot;&quot;,S_Site_Address_Street__c+ BR() ) +
IF(ISBLANK(S_Site_Address_Area__c), &quot;&quot;,S_Site_Address_Area__c+ BR() ) +
IF(ISBLANK(S_Site_Address_City__c), &quot;&quot;,S_Site_Address_City__c+ BR() ) +
IF(ISBLANK(S_Site_Address_State_Province__c), &quot;&quot;,S_Site_Address_State_Province__c+ BR() ) +
IF(ISBLANK(S_Site_Address_ZIP_Postal_Code__c), &quot;&quot;,S_Site_Address_ZIP_Postal_Code__c+ BR() ) +
IF(S_Site_Address_Country__c = &quot;United Kingdom&quot;, &quot;&quot;,S_Site_Address_Country__c)</formula>
        <inlineHelpText>Combines site address into one field</inlineHelpText>
        <label>Subscription Site Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Site_Product_Codes__c</fullName>
        <label>Subscription Site Product Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Site_Ref__c</fullName>
        <description>Creates site reference by using subscription.sub_ref + site postcode</description>
        <formula>Subscription__r.Sub_Ref__c 
+
&quot;-&quot;
+
   SUBSTITUTE(Site_Account__r.Principle_Address_ZIP_Postal_Code__c, &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto calculated using subscription reference and site postcode</inlineHelpText>
        <label>Subscription Site Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Site_Status__c</fullName>
        <description>This is the Status of the Subscription site and is indipendant ofthe Subscription Status</description>
        <inlineHelpText>This indicates the migrated subscription site status and should not be used moving forward</inlineHelpText>
        <label>Subscription Site Status (Migrated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <description>Populated from the Subscription</description>
        <formula>TEXT(Subscription__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is populated automatically from the Subscription</inlineHelpText>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Site Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Site Subsidiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Stores Membership Username</description>
        <inlineHelpText>Stores Membership Username</inlineHelpText>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Discount_Type__c</fullName>
        <description>The type of discount which the voucher code attracts</description>
        <inlineHelpText>Select the type of discount for voucher codes</inlineHelpText>
        <label>Voucher Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voucher_Discount_Value__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Value of the voucher, this is a numerical value but will be in the context of Voucher discount type</description>
        <inlineHelpText>Enter value of the discount in context of Voucher discount type</inlineHelpText>
        <label>Voucher Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Expiry_Date__c</fullName>
        <description>Converts Site End Date to text for voucher upload</description>
        <formula>TEXT(YEAR(Site_End_Date__c)) + &apos;/&apos;  +

IF  (LEN(TEXT (MONTH(Site_End_Date__c))) &lt; 2, 
   &apos;0&apos;+(TEXT (MONTH(Site_End_Date__c))),
   (TEXT (MONTH(Site_End_Date__c)))
)
+ &apos;/&apos; +

IF (LEN(TEXT (DAY(Site_End_Date__c))) &lt; 2, 
   &apos;0&apos;+(TEXT (DAY(Site_End_Date__c))),
   (TEXT (DAY(Site_End_Date__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts Site End Date to text for voucher upload</inlineHelpText>
        <label>Voucher Expiry Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Max_Qty__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Maximum number of products that can be purchases with this voucher</description>
        <inlineHelpText>Enter the maximum number of products that can be purchases with this voucher</inlineHelpText>
        <label>Voucher Max Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Minimum_Order_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum order value of voucher</description>
        <inlineHelpText>Enter minimum order value</inlineHelpText>
        <label>Voucher Minimum Order Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Number_Of_Uses__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of times the voucher can be used</description>
        <inlineHelpText>Number of times voucher can be used, 0 = unlimited</inlineHelpText>
        <label>Voucher Number Of Uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Product_Codes__c</fullName>
        <description>Online product code</description>
        <inlineHelpText>Select product code for voucher</inlineHelpText>
        <label>Voucher Product Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher__c</fullName>
        <inlineHelpText>The voucher for the subscription site which is created when the site is current and active.</inlineHelpText>
        <label>Voucher</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Voucher_created_at__c</fullName>
        <inlineHelpText>The date and time at which the voucher was created</inlineHelpText>
        <label>Voucher created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tmp_Subscription_start_date__c</fullName>
        <description>Used when cleaning subscription start dates when data was set to import date in error. Populates from subscription start date</description>
        <formula>Subscription__r.Start_Date__c</formula>
        <inlineHelpText>For admin purposes</inlineHelpText>
        <label>tmp NEW Subscription site start date</label>
        <type>Date</type>
    </fields>
    <label>Subscription Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Site_Account__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Subscription__c</columns>
        <columns>Subscription_Status__c</columns>
        <columns>Site_Start_Date__c</columns>
        <columns>Site_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Migrated_Subscription_Sites</fullName>
        <columns>NAME</columns>
        <columns>PK_CB_MEL_ID__c</columns>
        <columns>Migrated_Subscription_Site_Ref__c</columns>
        <columns>Subscription__c</columns>
        <columns>Subscription_Site_Ref__c</columns>
        <columns>Subscription_Site_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Migrated Subscription Sites</label>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sites_not_set_up_correctly</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Site_Account__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Site_Start_Date__c</columns>
        <columns>Site_End_Date__c</columns>
        <columns>Site_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Site_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Site_End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Site_Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Site_Status__c</field>
            <operation>contains</operation>
            <value>current</value>
        </filters>
        <label>Sites not set up correctly</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_SubSit_Insrt_for_Accnt_DC_1_or_3_or_6</fullName>
        <active>false</active>
        <errorConditionFormula>AND (ISNEW(), OR( Site_Account__r.Data_Cleanse_1__c  == true, Site_Account__r.Data_Cleanse_3__c == true, Site_Account__r.Data_Cleanse_6__c == true))</errorConditionFormula>
        <errorMessage>You can not insert new Subscription Site as this account will be deleted under Data Cleanse Project. Please contact IT team on 07789933270</errorMessage>
    </validationRules>
</CustomObject>